Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-9038

Fullscreen expands under the softkeys when orientation is changed.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.6.3
    • 4.6.3
    • None
    • None
    • 5800XM, S60 Public SDK 5.0
    • ae3d95f872c8bd2e192c58d7c7c830a3d2e4bc43

      Steps to reproduce:

      1) Start softkeys example
      2) Tap the "Look SK window type" until you get "Fullscreen with softkeys"
      3) Note that fullscreen is properly drawn taking the softkeys into account
      4) Change device orientation
      5) Note how the screen now extends under the softkeys.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            e0101981 Janne Anttila
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes