Fixed 'fullsreen with softkeys' mode not to expand under softkey area.

availableGeometry returns incorrect area after cba is made invisible,
it seems that this happens because CAknToolbar is not made invisible.
Fixed the problem by reverting back to SetExtentToWholeScreen usage
when the widget is really fullscreen, i.e.
Qt::WindowSoftkeysVisibleHint is not set.

Task-number: QTBUG-9038
Reviewed-by: Miikka Heikkinen